--- a/UrbanLife.Web/appsettings.json
+++ b/UrbanLife.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UrbanLife.Web-2223f18c-37a5-4593-9540-4279fd59f2a7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=UrbanLife;Integrated Security=true;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
