--- a/UrbanLife.Core/UrbanLife.Core.csproj
+++ b/UrbanLife.Core/UrbanLife.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UrbanLife.Data\UrbanLife.Data.csproj" />
+  </ItemGroup>
+
 </Project>
