--- a/UrbanLife.Web/UrbanLife.Web.csproj
+++ b/UrbanLife.Web/UrbanLife.Web.csproj
@@ -21,8 +21,8 @@
 
   <ItemGroup>
     <Folder Include="Areas\" />
-    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\profile-pictures\custom-pictures\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
