--- a/UrbanLife.Web/UrbanLife.Web.csproj
+++ b/UrbanLife.Web/UrbanLife.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\css\line.css" />
+    <_ContentIncludedByDefault Remove="wwwroot\css\travel.css" />
     <_ContentIncludedByDefault Remove="wwwroot\js\accountSettingsValidation.js" />
   </ItemGroup>
 
